# into-static

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  changelogging.toml
changes/: 2.change.md  ~arrays.feature.md  ~bytes.feature.md  ~cfg.internal.md  ~cow.change.md  ~tuples.feature.md  ~vec.feature.md
src/: lib.rs
